tests/errors/comprehensive/E5009_postfix_decrement_overflow.ez
/*
 * Error Test: E5009 - postfix-decrement-overflow
 * Expected: "integer overflow"
 */

do main() {
    temp min int = -9223372036854775808  // min int64
    min--  // Underflow
}
